--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://anushkasharma20.github.io/portfolio",
   "name": "anushka-os",
   "version": "1.0.0",
   "private": true,
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.24"
   },
   "browserslist": {
